tests/cases/errors/compile_unclosed_block.lox
// A block must be closed with '}'.
// expect compile error: Expect '}' after block.
{
  var a = 1;
